Fix to spacing on projects page

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -261,7 +261,7 @@ footer {
 	.project-half { position:relative;min-height:1px;padding-right:15px;padding-left:15px;text-align:center;margin-bottom:30px; }
 	.container.button { 
 		text-align:center; 
-		a { background:$blue-color;display:inline-block;font-size:16px;color:#ffffff;padding:12px 25px;text-decoration:none;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;-o-border-radius:4px;transition-duration:0.3s;transition-property:opacity, background, top; &:hover { opacity:0.7; } }
+		a { background:$blue-color;display:inline-block;font-size:18px;text-transform:uppercase;color:#ffffff;padding:12px 25px;text-decoration:none;border-radius:4px;-moz-border-radius:4px;-webkit-border-radius:4px;-o-border-radius:4px;transition-duration:0.3s;transition-property:opacity, background, top; &:hover { opacity:0.7; } }
 	} 
 	.row { margin-left:-15px;margin-right:-15px; }
 } 
@@ -277,7 +277,7 @@ footer {
 		margin:12px 10px;
 		h4 { font:22px 'brandon-grotesque', sans-serif;color:#444444;text-align:left;margin-bottom:0; }
 		p { font-size:18px; color:$blue-color;text-align:left; }
-		a { background-color:#212121;margin-top:-40px;padding:5px 10px 4px;text-transform:uppercase;font-weight:600;float:right;-moz-border-radius:4px;border-radius:4px;-o-border-radius:4px;-webkit-border-radius:4px;color:#ffffff;text-rendering:auto;-webkit-font-smoothing:antialiased;text-decoration:none; &:hover { background-color:#454545; } }
+		a { background-color:#212121;margin-top:-40px;padding:5px 10px 4px;text-transform:uppercase;float:right;-moz-border-radius:4px;border-radius:4px;-o-border-radius:4px;-webkit-border-radius:4px;color:#ffffff;text-rendering:auto;-webkit-font-smoothing:antialiased;text-decoration:none; &:hover { background-color:#454545; } }
 	}
 	.mosaic-backdrop { display:none;background:#111; }
 	.mosaic-overlay { bottom:-100px;height:80px;background-color:#ffffff;display:none;z-index:5;position:absolute;width:100%;}
@@ -385,8 +385,8 @@ body.fourohfour:before{content:"";display:block;position:fixed;top:0;right:0;bot
 #header .header-logo { margin-top:20px;width:215px;height:23px;-webkit-background-size:215px auto;-moz-background-size:215px auto;-o-background-size:215px auto;background-size:215px auto; }
 #portfolio-short h1, #about-me h3 { font-size:28px;line-height:0.9;margin-bottom:15px; }
 #about-me .about-section { width:100%; }
-.mosaic-block .mosaic-overlay { background-color:rgba(255,255,255,0.95);height:100% !important;bottom:0 !important; }
-.mosaic-block .details { margin:12px 0;position:absolute;bottom:0;width:100%;padding:0 10px; h4 { font-size:20px; } }
+.mosaic-block .mosaic-overlay { background-color:rgba(255,255,255,0.95);bottom:0 !important;height:72px; }
+.mosaic-block .details { margin:12px 0;position:absolute;bottom:0;width:100%;padding:0 10px; h4 { font-size:18px; } p { font-size:16px; } }
 #about-me { .about-img { img { width:150px; } } }
 }
 
